feat/fix: - Implement and debug the application store's repository
