# user/app/app.go
@@ -14,8 +14,12 @@ type Commands struct {
 	CreateUser       command.CreateUserCommandHandler
 	CreateBatchUsers command.CreateBatchUserCommandHandler
 	UpdateUser       command.UpdateUserCommandHandler
+	SoftDeleteUser   command.SoftDeleteUserCommandHandler
+	DisableUser      command.DisableUserCommandHandler
 }
 
 type Queries struct {
-	GetUser query.GetUserQueryHandler
+	GetUser            query.GetUserQueryHandler
+	UserExists         query.UserExistsHandler
+	UserStatusAnalysis query.UserStatusAnalysisHandler
 }
